--- a/Nest Game/g2.html
+++ b/Nest Game/g2.html
@@ -5,30 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>Black Myth Wukong</h1>
-    <img src="img/Screenshot 2025-11-24 124311.png" alt="">
-    <h3 id="sub">Black Myth: Wukong คือเกมแอ็กชัน RPG ที่มีรากฐานมาจากตำนานจีน
-        คุณจะได้ออกเดินทางในฐานะผู้ถูกลิขิตให้ก้าวเข้าสู่ความท้าทายและสิ่งมหัศจรรย์เบื้องหน้า
-        เพื่อเปิดเผยความจริงอันคลุมเครือภายใต้ม่านแห่งตำนานอันรุ่งโรจน์จากอดีต</h3>
-    <p>-50% <del>฿1,799</del> ฿899.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-        OS: Windows 10 64-bit<br>
-        PROCESSOR: Intel Core i5-8400 / AMD Ryzen 5 1600<br>
-        MEMORY: 16 GB RAM<br>
-        GRAPHICS: NVIDIA GeForce GTX 1060 6GB / AMD Radeon RX 580 8GB<br>
-        DIRECTX: Version 11<br>
-        STORAGE: 130 GB available space<br>
-        SOUND CARD: Windows Compatible Audio Device<br>
-        ADDITIONAL NOTES: HDD Supported, SSD Recommended. The above specifications were tested with DLSS/FSR/XeSS
-        enabled.
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Black Myth Wukong</h1>
+            <img src="img/B-wukong.webp" alt="">
+            <h3 id="sub">Black Myth: Wukong คือเกมแอ็กชัน RPG ที่มีรากฐานมาจากตำนานจีน
+                คุณจะได้ออกเดินทางในฐานะผู้ถูกลิขิตให้ก้าวเข้าสู่ความท้าทายและสิ่งมหัศจรรย์เบื้องหน้า
+                เพื่อเปิดเผยความจริงอันคลุมเครือภายใต้ม่านแห่งตำนานอันรุ่งโรจน์จากอดีต</h3>
+
+
+            <div class="pris">
+                <del>฿1,799</del>
+                <div class="buy">
+                    <h2>฿899.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/u83VdXAVq08?si=VZK9Zmmh-4oNnVqJ" title="YouTube video player"
+                    frameborder="0"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64-bit<br>
+                PROCESSOR: Intel Core i5-8400 / AMD Ryzen 5 1600<br>
+                MEMORY: 16 GB RAM<br>
+                GRAPHICS: NVIDIA GeForce GTX 1060 6GB <br> AMD Radeon RX 580 8GB<br>
+                DIRECTX: Version 11<br>
+                STORAGE: 130 GB available space<br>
+                SOUND CARD: Windows Compatible Audio Device<br>
+                ADDITIONAL NOTES: HDD Supported, SSD Recommended. The above specifications were tested with
+                DLSS/FSR/XeSS
+                enabled.
+        </div>
+    </div>
 </body>
 
 </html>
