--- a/Nest Game/g3.html
+++ b/Nest Game/g3.html
@@ -5,28 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>Garry's Mod</h1>
-    <img src="img/Screenshot 2025-11-24 124507.png" alt="">
-    <h3 id="sub">Garry's Mod เป็นแซนด์บ็อกซ์ฟิสิกส์ ไม่มีเป้าหมายหรือเป้าหมายตายตัว
-        เรามีเครื่องมือให้คุณและปล่อยให้คุณเล่นเอง</h3>
-    <p>-50% <del>฿219</del> ฿109.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        OS: Windows® 10<br>
-        PROCESSOR: 2 GHz Processor or better<br>
-        MEMORY: 4 GB RAM<br>
-        GRAPHICS: 1GB dedicated VRAM or better<br>
-        DIRECTX: Version 9.0c<br>
-        NETWORK: Broadband Internet connection<br>
-        STORAGE: 10 GB available space<br>
-        SOUND CARD: DirectX® 9 compatible<br>
-        ADDITIONAL NOTES: Mouse, Keyboard, Monitor</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Garry's Mod</h1>
+            <img src="img/Garrys_Mod.png" alt="">
+            <h3 id="sub">Garry's Mod เป็นแซนด์บ็อกซ์ฟิสิกส์ ไม่มีเป้าหมายหรือเป้าหมายตายตัว
+                เรามีเครื่องมือให้คุณและปล่อยให้คุณเล่นเองจน์จากอดีต</h3>
+            <div class="pris">
+                <del>฿219</del>
+                <div class="buy">
+                    <h2>฿109.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <div class="infor-img">
+                    <img src="g-img/garry.jpg" alt="">
+                    <img src="g-img/garry-1.jpg" alt="">
+                </div>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                OS: Windows® 10<br>
+                PROCESSOR: 2 GHz Processor or better<br>
+                MEMORY: 4 GB RAM<br>
+                GRAPHICS: 1GB dedicated VRAM or better<br>
+                DIRECTX: Version 9.0c<br>
+                NETWORK: Broadband Internet connection<br>
+                STORAGE: 10 GB available space<br>
+                SOUND CARD: DirectX® 9 compatible<br>
+                ADDITIONAL NOTES: Mouse, Keyboard, Monitor</h3>
+        </div>
+    </div>
 </body>
 
 </html>
