--- a/Nest Game/g4.html
+++ b/Nest Game/g4.html
@@ -5,28 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>Dead by Daylight</h1>
-    <img src="img/Screenshot 2025-11-24 124300.png" alt="">
-    <h3 id="sub">ติดอยู่ในดินแดนแห่งความชั่วร้ายที่แม้แต่ความตายก็หนีไม่พ้น ผู้รอดชีวิตทั้งสี่ผู้มุ่งมั่นต้องเผชิญหน้ากับฆาตกรกระหายเลือดในเกมสุดโหดที่ต้องใช้ทั้งความกล้าและไหวพริบ เลือกข้างและก้าวเข้าสู่โลกแห่งความตึงเครียดและความหวาดกลัวด้วยเกมมัลติเพลเยอร์แบบอสมมาตรที่ดีที่สุดของเกมสยองขวัญ</h3>
-    <p>-50% <del>฿399</del> ฿199.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-OS: Windows 10 64-bit Operating System<br>
-PROCESSOR: Intel Core i3-4170 or AMD FX-8120<br>
-MEMORY: 8 GB RAM<br>
-GRAPHICS: DX11 Compatible GeForce GTX 460 1GB or AMD HD 6850 1GB<br>
-DIRECTX: Version 11<br>
-NETWORK: Broadband Internet connection<br>
-STORAGE: 50 GB available space<br>
-SOUND CARD: DX11 compatible<br>
-ADDITIONAL NOTES: With these requirements, it is recommended that the game is played on Low quality settings.</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Dead by Dayligh</h1>
+            <img src="g-img/default.webp" alt="">
+            <h3 id="sub">
+                ติดอยู่ในดินแดนแห่งความชั่วร้ายที่แม้แต่ความตายก็หนีไม่พ้น
+                ผู้รอดชีวิตทั้งสี่ผู้มุ่งมั่นต้องเผชิญหน้ากับฆาตกรกระหายเลือดในเกมสุดโหดที่ต้องใช้ทั้งความกล้าและไหวพริบ
+                เลือกข้างและก้าวเข้าสู่โลกแห่งความตึงเครียดและความหวาดกลัวด้วยเกมมัลติเพลเยอร์แบบอสมมาตรที่ดีที่สุดของเกมสยองขวัญ
+            </h3>
+            <div class="pris">
+                <del>฿399</del>
+                <div class="buy">
+                    <h2>฿199.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/q9eGiYH-lo8?si=-YvLdYe5YXnTEn1d" title="YouTube video player"
+                    frameborder="0"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64-bit Operating System<br>
+                PROCESSOR: Intel Core i3-4170 or AMD FX-8120<br>
+                MEMORY: 8 GB RAM<br>
+                GRAPHICS: DX11 Compatible GeForce GTX 460 1GB <br> AMD HD 6850 1GB<br>
+                DIRECTX: Version 11<br>
+                NETWORK: Broadband Internet connection<br>
+                STORAGE: 50 GB available space<br>
+                SOUND CARD: DX11 compatible<br>
+                ADDITIONAL NOTES: With these requirements, it is recommended that the game is played on Low quality
+                settings.</h3>
+        </div>
+    </div>
 </body>
 
 </html>
