--- a/Nest Game/g7.html
+++ b/Nest Game/g7.html
@@ -5,25 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>Kingdom Come: Deliverance II</h1>
-    <img src="img/Screenshot 2025-11-24 124214.png" alt="">
-    <h3 id="sub">เกม RPG แอ็คชั่นสุดระทึกที่ขับเคลื่อนด้วยเนื้อเรื่องอันน่าตื่นเต้น พร้อมโลกเปิดอันเข้มข้น ดำเนินเรื่องราวในยุโรปยุคกลางศตวรรษที่ 15 สัมผัสประสบการณ์การผจญภัยในยุคกลางสุดเข้มข้น ผ่านมุมมองของเฮนรี่หนุ่ม สู่การเดินทางอันยิ่งใหญ่</h3>
-    <p>-50% <del>฿1,423.62</del> ฿711.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-        OS: Windows 10 64bit<br>
-        PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
-        MEMORY: 8 GB RAM<br>
-        GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
-        DIRECTX: Version 12<br>
-        STORAGE: 25 GB available space</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Kingdom Come: Deliverance II</h1>
+            <img src="img/kingdom-2.png" alt="">
+            <h3 id="sub">
+                เกม RPG แอ็คชั่นสุดระทึกที่ขับเคลื่อนด้วยเนื้อเรื่องอันน่าตื่นเต้น พร้อมโลกเปิดอันเข้มข้น
+                ดำเนินเรื่องราวในยุโรปยุคกลางศตวรรษที่ 15 สัมผัสประสบการณ์การผจญภัยในยุคกลางสุดเข้มข้น
+                ผ่านมุมมองของเฮนรี่หนุ่ม
+                สู่การเดินทางอันยิ่งใหญ่
+            </h3>
+            <div class="pris">
+                <del>฿1,423.62</del>
+                <div class="buy">
+                    <h2>฿711.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/ju8R8gwD-Vg?si=JSI3wvaTSQ_KG6il" title="YouTube video player"
+                    frameborder="0"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64bit<br>
+                PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
+                MEMORY: 8 GB RAM<br>
+                GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
+                DIRECTX: Version 12<br>
+                STORAGE: 25 GB available space</h3>
+        </div>
+    </div>
 </body>
 
 </html>
