--- a/Nest Game/g1.html
+++ b/Nest Game/g1.html
@@ -5,27 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>Age of Mythology: Retold</h1>
-    <img src="img/age.png" alt="">
-    <h3 id="sub">สวมบทบาทเป็นเทพเจ้าในตำนานและปราบศัตรูในเกมวางแผนเรียลไทม์สุดคลาสสิกในตำนานที่ได้รับรางวัลนี้
-        กลับมามีชีวิตอีกครั้ง ลุยสงครามในแคมเปญเหนือกาลเวลา การต่อสู้อันดุเดือด
-        และโหมดผู้เล่นหลายคนที่ขับเคลื่อนด้วยพลังของเทพเจ้า</h3>
-    <p>-50% <del>฿990</del> ฿495</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-        OS: Windows 10 64bit<br>
-        PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
-        MEMORY: 8 GB RAM<br>
-        GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
-        DIRECTX: Version 12<br>
-        STORAGE: 25 GB available space</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Age of Mythology: Retold</h1>
+            <img src="img/age of mythology.webp" alt="">
+            <h3 id="sub">สวมบทบาทเป็นเทพเจ้าในตำนานและปราบศัตรูในเกมวางแผนเรียลไทม์สุดคลาสสิกในตำนานที่ได้รับรางวัลนี้
+                กลับมามีชีวิตอีกครั้ง ลุยสงครามในแคมเปญเหนือกาลเวลา การต่อสู้อันดุเดือด
+                และโหมดผู้เล่นหลายคนที่ขับเคลื่อนด้วยพลังของเทพเจ้า</h3>
+            <div class="pris">
+                <del>฿990</del>
+                <div class="buy">
+                    <h2>฿495</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/YhoFR48tU48?si=olppwC7OqmAksGzo" title="YouTube video player"
+                    frameborder="0"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64bit<br>
+                PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
+                MEMORY: 8 GB RAM<br>
+                GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
+                DIRECTX: Version 12<br>
+                STORAGE: 25 GB available space</h3>
+        </div>
+    </div>
 </body>
 
 </html>
