--- a/Nest Game/g5.html
+++ b/Nest Game/g5.html
@@ -5,25 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>PEAK</h1>
-    <img src="img/Screenshot 2025-11-24 124236.png" alt="">
-    <h3 id="sub">PEAK คือเกมปีนเขาแบบร่วมมือกันที่ความผิดพลาดเพียงเล็กน้อยก็อาจนำมาซึ่งหายนะได้ ไม่ว่าจะเล่นคนเดียวหรือเล่นเป็นกลุ่มนักสำรวจธรรมชาติที่หลงทาง ความหวังเดียวของคุณในการช่วยตัวเองจากเกาะลึกลับคือการปีนป่ายภูเขาที่อยู่ใจกลางเกาะ คุณมีคุณสมบัติพอที่จะไปถึงจุดสูงสุดหรือไม่?</h3>
-    <p>-50% <del>฿159</del> ฿79.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-        OS: Windows 10 64bit<br>
-        PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
-        MEMORY: 8 GB RAM<br>
-        GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
-        DIRECTX: Version 12<br>
-        STORAGE: 25 GB available space</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>Dead by Dayligh</h1>
+            <img src="g-img/peak-2.jpg" alt="">
+            <h3 id="sub">ติดอยู่ในดินแดนแห่งความชั่วร้ายที่แม้แต่ความตายก็หนีไม่พ้น
+                ผู้รอดชีวิตทั้งสี่ผู้มุ่งมั่นต้องเผชิญหน้ากับฆาตกรกระหายเลือดในเกมสุดโหดที่ต้องใช้ทั้งความกล้าและไหวพริบ
+            </h3>
+            <div class="pris">
+                <del>฿399</del>
+                <div class="buy">
+                    <h2>฿199.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/dgOlgyjH7CI?si=9n-OjVvk8qyz6Hae" title="YouTube video player"
+                    frameborder="0"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64bit<br>
+                PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
+                MEMORY: 8 GB RAM<br>
+                GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
+                DIRECTX: Version 12<br>
+                STORAGE: 25 GB available space</h3>
+        </div>
+    </div>
 </body>
 
 </html>
