--- a/Nest Game/g9.html
+++ b/Nest Game/g9.html
@@ -5,25 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nest Games</title>
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="g-style.css">
 </head>
 
 <body>
-    <a href="index.html">หน้าหลัก</a>
-    <h1>EA SPORTS FC™ 26</h1>
-    <img src="img/Screenshot 2025-11-24 124145.png" alt="">
-    <h3 id="sub">สโมสรเป็นของคุณใน EA SPORTS FC™ 26 เล่นเกมตามแบบของคุณด้วยประสบการณ์การเล่นเกมที่ได้รับการปรับปรุงใหม่ซึ่งขับเคลื่อนโดยความคิดเห็นของชุมชน Manager Live Challenges ที่นำเสนอเนื้อเรื่องใหม่ให้กับฤดูกาลใหม่ และ Archetypes ที่ได้รับแรงบันดาลใจจากผู้เล่นระดับตำนานของเกม</h3>
-    <p>-50% <del>฿1990</del> ฿999.50</p><button>Buy now</button>
-    <h3 id="sp">MINIMUM: <br>
-        Requires a 64-bit processor and operating system<br>
-        OS: Windows 10 64bit<br>
-        PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
-        MEMORY: 8 GB RAM<br>
-        GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
-        DIRECTX: Version 12<br>
-        STORAGE: 25 GB available space</h3>
+    <div class="in-for-g">
+        <div class="in-put-g">
+            <button class="back" hreef="index.html"><a href="index.html">หน้าหลัก</a>
+            </button>
+            <h1>EA SPORTS FC™ 26
+            </h1>
+            <img src="g-img/fc26.jpg" alt="">
+            <h3 id="sub">
+                สโมสรเป็นของคุณใน EA SPORTS FC™ 26
+                เล่นเกมตามแบบของคุณด้วยประสบการณ์การเล่นเกมที่ได้รับการปรับปรุงใหม่ซึ่งขับเคลื่อนโดยความคิดเห็นของชุมชน
+                Manager Live
+                Challenges ที่นำเสนอเนื้อเรื่องใหม่ให้กับฤดูกาลใหม่ และ Archetypes
+                ที่ได้รับแรงบันดาลใจจากผู้เล่นระดับตำนานของเกม
+            </h3>
+            <div class="pris">
+                <del>฿1990</del>
+                <div class="buy">
+                    <h2>฿999.50</h2>
+                    <p>-50% OFF</p>
+                </div>
+            </div>
+            <button class="buy-now">Buy now</button>
+        </div>
+        <div class="in-put-videlo">
+            <div class="in-put-youtobe">
+                <h1>ตัวอย่าง</h1>
+                <iframe src="https://www.youtube.com/embed/GBq8fcpBOTU?si=m_ptIWP84m1EYxd0"
+                    title="YouTube video player"></iframe>
+            </div>
+            <hr>
+            <h3 id="sp">MINIMUM: <br>
+                Requires a 64-bit processor and operating system<br>
+                OS: Windows 10 64bit<br>
+                PROCESSOR: Intel® i3-4130 or AMD FX 4350 at 2.4GHZ+ with 2 cores / 4 threads and AVX support<br>
+                MEMORY: 8 GB RAM<br>
+                GRAPHICS: NVIDIA® GeForce® GTX 645 or AMD Radeon™ Vega 8 or Intel® Iris Graphics 550 or better<br>
+                DIRECTX: Version 12<br>
+                STORAGE: 25 GB available space</h3>
+        </div>
+    </div>
 </body>
 
 </html>
