--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -31,11 +31,11 @@
       <img src="img/icon-re.png" alt="" width="140rem" class="imgin">
       <h3>สมัครสมาชิก</h3>
       <input type="text" name="usrnamesignin" placeholder="Username" />
-      <input type="text" name="usrlastnamesignin" placeholder="Userlastname" /><br />
-      <input type="text" name="usrphonesingin" placeholder="Userphonenumber" /><br />
-      <input type="text" name="usrgmailsingin" placeholder="Usergmail" /><br />
+      <input type="text" name="usrlastnamesignin" placeholder="First and Lastname" /><br />
+      <input type="text" name="usrphonesingin" placeholder="Phone number" /><br />
+      <input type="text" name="usrgmailsingin" placeholder="Email" /><br />
       <input type="password" name="urspwdsingin" placeholder="Password" /><br />
-      <input type="password" name="usrconpwdsingin" placeholder="Confirmpassword" /><br /><br />
+      <input type="password" name="usrconpwdsingin" placeholder="Confirm Password" /><br /><br />
       <button id="signinSubmit">ตกลง</button><br />
       <p><br />เมื่อเข้าสู่ระบบ ถือว่าคุณได้ยอมรับและ<br />รับทราบ <a href="agreement.html">นโยบายความเป็นส่วนตัว</a>
         ของ Nest Games แล้ว</p>
@@ -46,7 +46,7 @@
   <div class="nav-bar">
     <div class="icon"><img src="img/icon-re.png" alt="" /></div>
     <div class="nav-search">
-      <input type="text" name="" id="" placeholder="  ค้นหา" />
+      <input type="text" name="" id="searchBar" placeholder="ค้นหา" />
       <button onclick="bt()">
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
       </button>
