--- a/Nest Game/index.html
+++ b/Nest Game/index.html
@@ -110,7 +110,7 @@
       </div>
       <h5>Age of Mythology: Retold</h5>
       <div class="it">
-        <p>-50% <del>฿990</del> ฿495</p>
+        <p><span class="discount">-50%</span> <del>฿990</del> ฿495</p>
         <button id="by"><a href="g1.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -123,7 +123,7 @@
       </div>
       <h5>Black Myth Wukong</h5>
       <div class="it">
-        <p>-50% <del>฿1,799</del> ฿899.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,799</del> ฿899.50</p>
         <button id="by"><a href="g2.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -138,7 +138,7 @@
       </div>
       <h5>Garry's Mod</h5>
       <div class="it">
-        <p>-50% <del>฿219</del> ฿109.50</p>
+        <p><span class="discount">-50%</span> <del>฿219</del> ฿109.50</p>
         <button id="by"><a href="g3.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -157,7 +157,7 @@
       </div>
       <h5>Dead by Daylight</h5>
       <div class="it">
-        <p>-50% <del>฿399</del> ฿199.50</p>
+        <p><span class="discount">-50%</span> <del>฿399</del> ฿199.50</p>
         <button id="by"><a href="g4.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -170,7 +170,7 @@
       </div>
       <h5>PEAK</h5>
       <div class="it">
-        <p>-50% <del>฿159</del> ฿79.50</p>
+        <p><span class="discount">-50%</span> <del>฿159</del> ฿79.50</p>
         <button id="by"><a href="g5.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -185,7 +185,7 @@
       </div>
       <h5>Forza Horizon 5</h5>
       <div class="it">
-        <p>-50% <del>฿1,899</del> ฿949.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,899</del> ฿949.50</p>
         <button id="by"><a href="g6.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -206,7 +206,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1,423.62</del> ฿711.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,423.62</del> ฿711.50</p>
         <button id="by"><a href="g7.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -221,7 +221,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1,149</del> ฿574.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,149</del> ฿574.50</p>
         <button id="by"><a href="g8.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -236,7 +236,7 @@
       </div>
       <h5>EA SPORTS FC™ 26</h5>
       <div class="it">
-        <p>-50% <del>฿1990</del> ฿999.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,990</del> ฿999.50</p>
         <button id="by"><a href="g9.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -255,7 +255,7 @@
       </div>
       <h5>Anno 117: Pax Romana</h5>
       <div class="it">
-        <p>-50% <del>฿1,699</del> ฿849.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,699</del> ฿849.50</p>
         <button id="by"><a href="g10.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -268,7 +268,7 @@
       </div>
       <h5>Planet Zoo</h5>
       <div class="it">
-        <p>-50% <del>฿1,199</del> ฿599.50</p>
+        <p><span class="discount">-50%</span> <del>฿1,199</del> ฿599.50</p>
         <button id="by"><a href="g11.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -283,7 +283,7 @@
       </div>
       <h5>Planet Coaster 2</h5>
       <div class="it">
-        <p>-50% <del>฿1,200</del> ฿600</p>
+        <p><span class="discount">-50%</span> <del>฿1,200</del> ฿600</p>
         <button id="by"><a href="g12.html">BUY</a></button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -304,7 +304,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1,976</del> ฿988</p>
+        <p><span class="discount">-50%</span> <del>฿1,976</del> ฿988</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -319,7 +319,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿607</del> ฿303.50</p>
+        <p><span class="discount">-50%</span> <del>฿607</del> ฿303.50</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -336,7 +336,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿642</del> ฿321</p>
+        <p><span class="discount">-50%</span> <del>฿642</del> ฿321</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -359,7 +359,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿500</del> ฿250</p>
+        <p><span class="discount">-50%</span> <del>฿500</del> ฿250</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
@@ -374,7 +374,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1000</del> ฿500</p>
+        <p><span class="discount">-50%</span> <del>฿1,000</del> ฿500</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
         <div class="ovrlay">
@@ -391,7 +391,7 @@
         <br>
       </h5>
       <div class="it">
-        <p>-50% <del>฿1750</del> ฿875</p>
+        <p><span class="discount">-50%</span> <del>฿1,750</del> ฿875</p>
         <button id="by">BUY</button>
         <button id="add"><i class="fa-solid fa-heart"></i></button>
       </div>
